 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 * 
 * $Id$
 */
 
TreeTank 4.17
-------------
+ Moved to FreeBSD License.
+ Replaced all axis classes performing tests to generic TestAxis combined
  with IAxisTest.
 
TreeTank 4.16
-------------
+ WriteTransaction now threadsafe by enforcing single-writer contract.
+ Auto commit now default. User must no longer call commit. Auto commit
  commits after the modification of some nodes as well as before
  IWriteTransaction.close().
+ Idempotent close operation. Multiple calls do no longer hurt.
+ Added ID annotation for beans.
+ BeanUtil now serializing fields as attributes.
+ Added namespace and attribute getters to IReadTransaction.
+ Support wildcard suffix in FullTextAxis. It is activated by * as last
  character in token.
 
TreeTank 4.15
-------------
+ INode no longer part of public API; replaced by AbstractNode.
+ BeanUtil now supports byte[].
+ No longer make INode public. This lead to a variety of use cases mixing
  pure transaction cursor and node semantics. As a result, nobody really knew
  where the transaction cursor actually resided. These side-effects can be
  clearly avoided by a pure cursor-based approach.
+ Introduce concept of cursor stability: Always leave the cursor of a
  transaction where it was before calling a method except the method explicitly
  modifies the state of the transaction.
+ Moved bean-related stuff to beanlayer package.
+ Renamed UTF.convert() to UTF.getBytes([String|int]) 
  and UTF.parse[String|int](). Integer and Long methods are twice as fast and
  compatible to String.
+ BeanUtil now supporting boolean, int, long, float, double, and String.