@@ -30,63 +30,23 @@
 
 package org.treetank.axislayer;
 
-import org.treetank.api.IAxisFilter;
+import org.treetank.api.IFilter;
 import org.treetank.api.IReadTransaction;
-import org.treetank.utils.UTF;
 
 /**
- * <h1>ValueAxisTest</h1>
+ * <h1>NodeAxisTest</h1>
  * 
  * <p>
- * Only match nodes of kind TEXT whoms value matches.
+ * Only match ELEMENT and TEXT nodes.
  * </p>
  */
-public class ValueAxisFilter implements IAxisFilter {
-
-  /** Value test to do. */
-  private final byte[] mValue;
-
-  /**
-   * Constructor initializing internal state.
-   * 
-   * @param value Value to find.
-   */
-  public ValueAxisFilter(final byte[] value) {
-    mValue = value;
-  }
-
-  /**
-   * Constructor initializing internal state.
-   * 
-   * @param value Value to find.
-   */
-  public ValueAxisFilter(final String value) {
-    this(UTF.getBytes(value));
-  }
-
-  /**
-   * Constructor initializing internal state.
-   * 
-   * @param value Value to find.
-   */
-  public ValueAxisFilter(final int value) {
-    this(UTF.getBytes(value));
-  }
-
-  /**
-   * Constructor initializing internal state.
-   * 
-   * @param value Value to find.
-   */
-  public ValueAxisFilter(final long value) {
-    this(UTF.getBytes(value));
-  }
+public class NodeFilter implements IFilter {
 
   /**
    * {@inheritDoc}
    */
   public final boolean test(final IReadTransaction rtx) {
-    return (rtx.isText() && (UTF.equals(rtx.getValue(), mValue)));
+    return (rtx.isElement() || rtx.isText());
   }
 
 }
